--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -2,6 +2,7 @@
   "files": [],
   "references": [
     { "path": "packages/core/tsconfig.build.json" },
-    { "path": "packages/adapters/tsconfig.build.json" }
+    { "path": "packages/adapters/tsconfig.build.json" },
+    { "path": "packages/self-healing/tsconfig.build.json" }
   ]
 }
